--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.6",
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.9",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "react": "^16.13.1",
@@ -17,7 +21,8 @@
     "redux": "^4.0.5",
     "redux-form": "^8.3.6",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "typescript": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,6 +48,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.11",
+    "@types/react-router-dom": "^5.1.6",
     "gh-pages": "^3.1.0"
   }
 }
